Añadido la logica de negocio para calcular el costo de envio de un pedido